removing mode switch

--- a/interface.html
+++ b/interface.html
@@ -43,10 +43,10 @@
 </head>
 <body>
     <button id="recordButton">Start Recording</button>
-    <select id="modeSwitch">
+    <!-- <select id="modeSwitch">
         <option value="manual">Manual Mode</option>
         <option value="auto">Automatic Mode</option>
-    </select>
+    </select> -->
     <div id="responseArea"></div>
     <script src="interface.js"></script>
 </body>
